--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,59 @@
-Franco Pacheco
-	•	About
-	•	Credits
-	•	Music Samples
-	•	Contact
-About Me
-Music producer/ engineer with over 10 years of experience in the industry
-Credits
-I've worked with amazing artists and creatives including:
-	•	Lil 2z
-	•	Lil Keep
-	•	Kasha Paige
-	•	Dee Gatti
-	•	Anthony Evans
-	•	Ryan Garcia
-	•	Young Nation
-Music Samples
-Check out some of my work below:
-Your browser does not support the audio element. Your browser does not support the audio element.
-Contact
-If you'd like to work with me, feel free to reach out!
-Email: frank3am47@gmail.com
-© 2025 [Franco Pacheco]. All rights reserved.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Franco Pacheco - Audio Engineer & Music Producer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Hero Section -->
+    <section id="hero">
+        <h1>Franco Pacheco</h1>
+        <p>Audio Engineer & Music Producer with over 10 years of experience</p>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I’m Franco Pacheco, an Audio Engineer and Music Producer with over 10 years of experience in the industry. My journey started with a deep passion for sound, and over the years, I've had the privilege of working on a wide range of projects—from music albums and EPs to podcasts and audiobooks.</p>
+        <p>Whether it’s mixing a track to perfection, designing soundscapes for a podcast, or mastering an album for release, I’m dedicated to delivering the highest quality audio that enhances the creative vision of every project. I’ve worked with incredible artists and producers, helping them bring their sound to life with clarity, warmth, and depth.</p>
+        <p>With a keen ear for detail, I’m always looking for ways to push the boundaries of audio engineering, creating immersive sound experiences that resonate with listeners. From the first recording to the final mastering, I bring both technical expertise and artistic vision to every project.</p>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="portfolio-grid">
+            <!-- Portfolio items go here -->
+        </div>
+    </section>
+
+    <!-- Music Section -->
+    <section id="music">
+        <h2>My Music</h2>
+        <div class="music-links">
+            <p>Check out my tracks on Spotify:</p>
+            <ul>
+                <li><a href="https://open.spotify.com/track/7FgjoiSwkVAHHUAzubUTc5?si=0471b05bc6274d5d" target="_blank">Track 1: Listen on Spotify</a></li>
+                <li><a href="https://open.spotify.com/track/5e37QnU1xWKLJflHIsAEo5?si=770916ca7d0a4965" target="_blank">Track 2: Listen on Spotify</a></li>
+                <li><a href="https://open.spotify.com/track/2kSc91FzuF1HWJud3apTkB?si=fe38693a5ba44405" target="_blank">Track 3: Listen on Spotify</a></li>
+                <li><a href="https://open.spotify.com/track/1cEr5AUd1cg3KaZG2sQGVd?si=9564ec6dd62d46a0" target="_blank">Track 4: Listen on Spotify</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>If you'd like to get in touch, feel free to reach out via email or connect with me on Instagram:</p>
+        <p>Email: <a href="mailto:frank3am47@gmail.com">frank3am47@gmail.com</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/frank3am" target="_blank">@frank3am</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 Franco Pacheco - All Rights Reserved</p>
+    </footer>
+</body>
+</html>
